--- a/web/daily/src/index.css
+++ b/web/daily/src/index.css
@@ -2,11 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face{
+    font-family: "LINESeedKR-Bd";
+    font-weight: normal;
+    src: url("./fonts/LINESeedKR-Bd.ttf") format("truetype");
+}
+
+@font-face{
+    font-family: "LINESeedKR-Rg";
+    font-weight: normal;
+    src: url("./fonts/LINESeedKR-Rg.ttf") format("truetype");
+}
+
+@font-face{
+    font-family: "LINESeedKR-Th";
+    font-weight: normal;
+    src: url("./fonts/LINESeedKR-Th.ttf") format("truetype");
+}
+
 html, body, #root{
     margin: 0;
     height: 100%;
-}
-
-#root{
-    background-color: gray;
+    font-family: "LINESeedKR-Rg";
 }
